--- a/party/www/first.html
+++ b/party/www/first.html
@@ -8,5 +8,6 @@
 {% block script %}
 {{include_script('first.js')}}
 {{include_script('first.bundle.js')}}
+{{include_script('confetti.bundle.js')}}
     
 {% endblock %}
